--- a/rancher2/docker-compose.yml
+++ b/rancher2/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     restart: unless-stopped
     container_name: ${APP_NAME}
     user: root
-    volumes:
-      - /var/data/${APP_NAME}/mysql:/var/lib/mysql
+    # volumes:
+      # - /var/data/${APP_NAME}/mysql:/var/lib/mysql
     ports:
-      - "8888:80"
-      - "8443:443"
+      - "8899:80"
+      - "8889:443"
       
