--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
       - DB_VENDOR=mysql
-      - DB_ADDR=172.16.1.17
+      - DB_ADDR=mac.k.9kb.me
       - DB_PORT=3306
       - DB_DATABASE=keycloak
       - DB_USER=keycloak
       - DB_PASSWORD=Keycloak@123
       - KEYCLOAK_LOGLEVEL=INFO   # 支持的日志级别ALL，DEBUG，ERROR，FATAL，INFO，OFF，TRACE和WARN。
     ports:
-      - "8855:8080"
+      - "18855:8080"
