更新 base volumes

--- a/sentinal-dashboard/.env
+++ b/sentinal-dashboard/.env
@@ -4,3 +4,4 @@ APP_NAME=sentinel-dashboard
 APP_VERSION=1.4.0
 DOMAIN=weteam.me
 EMAIL_ADDRESS=it@weteam.me
+VOLUMES_BASE=/Users/larrykoo/Documents/docker
