--- a/rancher2/.env
+++ b/rancher2/.env
@@ -1,7 +1,7 @@
 # .env file
 
 APP_NAME=rancher2
-APP_VERSION=latest
+APP_VERSION=v2.1.10
 DOMAIN=longwx.com
 EMAIL_ADDRESS=it@weteam.me
 VOLUMES_BASE=/Users/larrykoo/Documents/docker
